# test-ci-cd

./: Makefile  README.md  pyproject.toml  pytype.cfg  tox.ini
.github/workflows/: automated_workflow.yml
src/numsum/: __init__.py  main.py
tests/: test_main.py
