[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "number_summer"
authors = [{name = "David Nevin", email = "dnevincodes@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
]

[tool.flit.module]
name = "numsum"

[projecy.urls]
Home = "https://github.com/davidjnevin/test-ci-cd"

[project.optional-dependencies]
dev = [
	"autoflake==2.2.1",
	"bandit==1.7.7",
	"coverage==7.4.1",
	"flake8-bugbear==24.1.17",
	"flake8-cognitive-complexity==0.1.0",
	"Flake8-pyproject==1.2.3",
	"pytype==2024.1.24; platform_system != 'Windows'",
	"safety==3.0.1",
    "black==24.1.1",
    "flake8==7.0.0",
    "isort==5.13.2",
    "isort==5.13.2",
    "pip-audit==2.7.0",
    "pre-commit==3.6.0",
    ]

test = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
	"tox==4.12.1",
]


[tool.isort]
profile = "black"
py_version = 39
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration relatively slow (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"
pythonpath = "src"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

